Fixed structure of products for both light and dark mode

--- a/css/dark.css
+++ b/css/dark.css
@@ -345,6 +345,7 @@ body {
 /* Sections */
 .home-section {
     max-width: 1200px;
+    width: 100%;
     margin: 60px auto;
     padding: 0 20px;
     color: white;
